[package]
name = "language"
version = "0.1.0"
authors = ["nilq <i.am.niels.nielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
hashbrown = "0.9.1"
fnv = "1.0.3"
im-rc = "14.3.0"
colored = "2.0.0"
backtrace = "0.3.56"
chic = "1.2.2"
line-span = "0.1.2"
strsim = "0.10.0"
rand = "0.8.3"
textplots = "0.5.4"
rand_distr = "0.4.0"
histogram = "0.6.9"
flame = "0.2.2"
flamer = "0.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 16
panic = 'unwind'